tests/fixtures/invalid/str_lshift_bool.py
# Cannot left shift Str and Bool
x: str = "hello" << True
